# teardown-box

./: .gitignore  README.md  pyproject.toml
docs/: how-i-work.md  index.html  sample-report.html  sample-report.md
fixtures/cost/: ebs_volumes.csv  utilization_summary.json
fixtures/edge/: nginx.conf  tls_scan.txt
fixtures/infra/: terraform_plan.txt
fixtures/linux/: df_h.txt  ss_lntp.txt  systemctl_status.txt
fixtures/postgres/: pg_pool_stats.json  pg_stat_statements.csv  pg_stat_user_tables.csv
src/teardown_box/: cli.py  findings.py  fixtures.py  runner.py  severity.py
src/teardown_box.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/teardown_box/checks/: __init__.py  cost_signals.py  linux_disk.py  linux_ports.py  linux_systemd.py  nginx_proxy_timeouts.py  pg_autovacuum.py  pg_pool_saturation.py  pg_seq_scans.py  pg_slow_queries.py  tls_policy.py
src/teardown_box/report/: boilerplate.py  render_html.py  render_md.py
