[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "teardown-box"
version = "0.1.0"
description = "Teardown-in-a-Box: generate a client-ready teardown report from fixtures."
requires-python = ">=3.10"
authors = [{name="Buzzy Planet"}]
dependencies = ["markdown>=3.6"]

[project.scripts]
teardown-box = "teardown_box.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
